concord_macros/tests/trybuild/fail/codegen/sse_response_pagination.stderr
error: pagination is only supported for buffered responses
 --> tests/trybuild/fail/codegen/sse_response_pagination.rs:9:9
  |
9 |     GET List(start: u64 = 0, count: u64 = 10)
  |         ^^^^

warning: unused import: `concord_core::advanced::OctetStream`
 --> tests/trybuild/fail/codegen/sse_response_pagination.rs:1:5
  |
1 | use concord_core::advanced::OctetStream;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
